# atrial-fib-in-microgravity

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/preprint/: SUBMISSION_GUIDE.md  cinc_abstract.md  cureus_manuscript.md  frontiers_hypothesis_manuscript.md  manuscript.md  scaling_law_manuscript.md
docs/superpowers/plans/: 2026-06-14-crn-ionic-upgrade.md  2026-06-15-gravitational-scaling-law.md
docs/superpowers/specs/: 2026-06-14-crn-ionic-upgrade-design.md  2026-06-15-gravitational-scaling-law-design.md
experiments/: apd_wavelength.py  artifact_control.py  calibrate_cv.py  dose_response.py  ensemble_with_ci.py  fibrosis_threshold.py  gravity_corroboration.py  gravity_sensitivity.py  gravity_sweep.py  make_crn_animation.py  mechanism_panel.py  restitution_curves.py  restitution_slope.py  run_baseline_vs_microgravity.py  sensitivity.py  sustain_probe.py  validate_single_cell.py  vulnerable_window.py
figures/: results.json  results_crn.json
src/afib_microgravity/: __init__.py  cell_model.py  crn.py  crn_numba.py  diffusion.py  fibrosis.py  gravity_law.py  metrics.py  model.py  protocols.py  remodeling.py  restitution.py  viz.py
tests/: test_cell_model.py  test_crn_singlecell.py  test_diffusion.py  test_fibrosis.py  test_gravity_law.py  test_gravity_sweep_smoke.py  test_metrics.py  test_model.py  test_ps_detector.py  test_remodeling_crn.py  test_restitution.py
