[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "afib-microgravity"
version = "0.1.0"
description = "In-silico model of atrial fibrillation under spaceflight (microgravity) remodelling"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Laura Piñero Roig" }]
dependencies = ["numpy>=1.24", "scipy>=1.10", "matplotlib>=3.7"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
